syntax = "proto3";

package outward.v1;

import "google/api/annotations.proto";

option go_package = "outward/v1";

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/users/login"
      body: "*"
    };
  }

  rpc Logout(LogoutRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/users/logout"
      body: "*"
    };
  }
}

message Workspace {
  string name = 1;
  string region = 2;
}

message CreateWorkspaceRequest {
  string name = 1;
  string region = 2;
}

message CreateWorkspaceResponse {
  Workspace workspace = 1;
}

message GetWorkspaceListRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message GetWorkspaceListResponse {
  repeated Workspace workspaces = 1;
  string next_page_token = 2;
}
